# needletail

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
crates/capability-controller/: Cargo.toml  README.md
crates/capability-controller/src/: controller.rs  entropy.rs  error.rs  exchange.rs  identity.rs  issuer.rs  lib.rs  policy.rs  route.rs  telemetry.rs
crates/capability-controller/tests/: controller.rs  load.rs
crates/capability-controller/tests/fixtures/: p00-media-capability-claims.json  p01-media-authorization-fact.json  p01-media-authorization-request.json
crates/capability-controller/tests/support/: mod.rs
crates/media-capability/: Cargo.toml  README.md
crates/media-capability/src/: lib.rs
crates/media-capability/tests/: verifier.rs
deploy/: README.md
deploy/gcp-lab/: av-contrib-run  av-mesh-run  build-components.sh  chrony-gcp.conf  configure-clock.sh  install-node.sh  needletail-contrib.service  needletail-media.service  needletail-mesh.service  needletail-ops-ui-contrib.service  needletail-ops-ui-contrib.socket  needletail-ops-ui-edge.service  needletail-ops-ui-edge.socket  needletail-rist-source-lori-4k.service  tune-udp-host.sh
docs/: audio-delivery-lanes.md  contributor-origin-boundary.md  edge-cache-fabric.md  operations-telemetry-transport.md  relay-fabric.md
docs/performance/: current-state-and-gaps.md  distribution-capacity-isolation.md  gcp-pcm-h3-endurance.md  latency-performance.md  loss-recovery-quality-latency-benchmark.md  real-world-load-screenshots.md
docs/real-world-tests/: 2026-07-15-gcp-intercontinental.md  2026-07-15-local-realtime.md  2026-07-16-relay-latency-qualification.md  2026-07-16-relay-latency.md  2026-07-17-linode-dag-replication.md  2026-07-17-lossless-h3.md  2026-07-17-multichannel-llhls-sizing.md  2026-07-17-pcm-h3-capacity.md  2026-07-18-h3-capacity-isolation.md  2026-07-18-opus-h3-200ms-aggregation.md  2026-07-18-opus-h3-capacity.md  2026-07-19-opus-h3-tail-bundle.md  2026-07-20-h264-fmp4-llhls-4k-8k.md  2026-07-20-opus-h3-clock-qualified-tail.md  2026-07-20-opus-h3-persistent-bundle-stream.md  2026-07-21-opus-h3-response-duration.md  README.md  (+1 more)
mission-control/: Cargo.toml  Makefile  README.md  Trunk.toml  fallback-index.html  index.html
mission-control/assets/: README.md
mission-control/scripts/: build.sh
mission-control/src/: lib.rs  main.rs  style.css
observability/: README.md  compose.yml
player/: README.md  package-lock.json  package.json
player/scripts/: build.mjs
scripts/: bootstrap-linode-node.sh  gcp-capture-operations.sh  gcp-dag-replication-qualification.sh  gcp-deployment-attestation.sh  gcp-h264-4k-viewer-capacity.sh  gcp-intercontinental-deploy.sh  gcp-intercontinental-lab.sh  gcp-intercontinental-qualification.sh  gcp-live-tail-profile.sh  gcp-lossless-latency.sh  gcp-opus-h3-response-ab.sh  gcp-pcm-h3-capacity-search.sh  gcp-pcm-h3-endurance.sh  gcp-pcm-readiness-canary.sh  linode-dag-replication-qualification.sh  linode-intercontinental-deploy.sh  linode-intercontinental-lab.sh  realtime-benchmark.sh  realtime-qualification.sh  realtime-soak.sh  relay-latency-delta.py  revision-metadata.sh  sample-linux-process.sh  summarize-linux-process-samples.sh  two-region-smoke.sh  validate-observability.sh  validate-product-boundary.sh  validate-real-world-evidence.sh
src/: lib.rs  main.rs  relay_topology.rs  service_plan.rs
(+55 files in other folders)
