[package]
name = "needletail-live"
version = "0.1.0"
edition = "2021"
default-run = "needletail"
license = "MIT"
description = "Product-level orchestration for the Needletail realtime media constellation"
repository = "https://github.com/wavey-ai/needletail"
readme = "README.md"

[[bin]]
name = "needletail"
path = "src/main.rs"

[workspace]
members = [".", "crates/capability-controller", "crates/media-capability"]
exclude = ["mission-control"]
resolver = "2"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "time",
] }
