[package]
name = "needletail-mission-control"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Needletail realtime media operations UI"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.7.0", features = ["json"] }
gloo-timers = "0.4.0"
js-sys = "=0.3.98"
leptos = { version = "0.9.0-alpha", features = ["csr"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
web-sys = { version = "=0.3.98", features = ["HtmlInputElement", "Location", "UrlSearchParams", "Window"] }
