[package]
name = "capability-controller"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Bounded Needletail media-capability issuer and browser exchange controller"
readme = "README.md"
publish = false

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "zeroize"] }
getrandom = "0.2"
hmac = "0.12"
media-capability = { path = "../media-capability" }
media-object = { path = "../../../media-object" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "=1.8.1", default-features = false }

[dev-dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "zeroize"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
